test(coupon) 쿠폰 서비스 테스트